--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,14 +7,19 @@
     <title>website</title>
 </head>
 
+<!--  -->
+<!--  -->
+<!--  -->
+<!-- Part 1 of Refactoring -->
+<!--  -->
+<!--  -->
+<!--  -->
 
-<!-- Question 1: Should body belong to a class? -->
 <body>
-<!-- Issue 1: div class = "header" is not semantic - SHOULD BE A header -->
+<!-- Issue 1: div class = "header" is not semantic - WILL BE A header (FIXED) -->
     <div class="header">
-    <!-- No Issue with h1, its parent is div class = "header" -->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- Issue 2: div is not semantic SHOULD BE A (I think) p -->
+        <!-- Issue 2: div is not semantic WILL BE A nav (FIXED)-->
         <div>
             <ul>
                 <li>
@@ -29,11 +34,22 @@
             </ul>
         </div>
     </div>
-    <!-- Issue 3: div class = "hero" is not semantic - SHOULD BE A nav -->
+    <!-- Issue 3: div class = "hero" is not semantic - NO ISSUE (FIXED) -->
     <div class="hero"></div>
-    <!-- Issue 4: div class = "content" is not semantic - SHOULD BE A section -->
+
+
+<!--  -->
+<!--  -->
+<!--  -->
+<!-- Part 2 of Refactoring -->
+<!--  -->
+<!--  -->
+<!--  -->
+
+
+    <!-- Issue 4: div class = "content" is not semantic - NO ISSUE (FIXED) -->
     <div class="content">
-        <!-- Issue 5: div class="search-engine-optimization" is not semantic SHOULD BE A (I think) figure -->
+        <!-- Issue 5: div class="search-engine-optimization" WILL BE section (FIXED) -->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -41,10 +57,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-
-
-        <!-- Issue 6: div  id="online-reputation-management class="online-reputation-management" is not semantic SHOULD BE A (I think) figure -->
-        <!-- Question 2: The purpose of an id is to be more specific than a class, why?  -->
+        <!-- Issue 6: div  id="online-reputation-management class="online-reputation-management" WILL BE section (FIXED)-->
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -52,8 +65,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-
-        <!-- Issue 7: div  id="social-media-marketing class="social-media-marketing" is not semantic SHOULD BE A (I think) figure -->
+        <!-- Issue 7: div  id="social-media-marketing class="social-media-marketing"  WILL BE section (FIXED) -->
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -62,18 +74,26 @@
             </p>
         </div>
     </div>
-    <!-- Issue 8: div class = "content" is not semantic - SHOULD BE AN aside -->
+
+<!--  -->
+<!--  -->
+<!--  -->
+<!-- Part 3 of Refactoring -->
+<!--  -->
+<!--  -->
+<!--  -->
+
+    <!-- Issue 8: div class = "benefits" is not semantic - WILL BE AN aside (FIXED) -->
     <div class="benefits">
-        <!-- Issue 9: div class="benefit-lead" is not semantic SHOULD BE A (I think) figure -->
+        <!-- Issue 9: div class="benefit-lead" is not semantic KEEP AS div (FIXED) -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <!-- Question 3: Should I make the images the same class? This would be done so that they have the same specifications -->
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <!-- Issue 10: div class="benefit-brand" is not semantic SHOULD BE A (I think) figure -->
+        <!-- Issue 10: div class="benefit-brand" is not semantic KEEP AS div (FIXED) -->
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -81,7 +101,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <!-- Issue 11: div class="benefit-cost" is not semantic SHOULD BE A (I think) figure -->
+        <!-- Issue 11: div class="benefit-cost" is not semantic KEEP AS div (FIXED) -->
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
@@ -91,8 +111,16 @@
         </div>
     </div>
 
+<!--  -->
+<!--  -->
+<!--  -->
+<!-- Part 4 of Refactoring -->
+<!--  -->
+<!--  -->
+<!--  -->
 
-    <!-- Issue 12: div class=footer" is not semantic SHOULD BE A footer -->
+
+    <!-- Issue 12: div class=footer" is not semantic WILL BE A footer (FIXED)-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
