Change div into header in HTML

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -16,8 +16,8 @@
 <!--  -->
 
 <body>
-<!-- Issue 1: div class = "header" is not semantic - WILL BE A header (FIXED) -->
-    <div class="header">
+<!-- Issue 1: div class = "header" is not semantic - WILL BE A header (FIXED - DONE) -->
+    <header class="marketing">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <!-- Issue 2: div is not semantic WILL BE A nav (FIXED)-->
         <div>
@@ -33,9 +33,19 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <!-- Issue 3: div class = "hero" is not semantic - NO ISSUE (FIXED) -->
     <div class="hero"></div>
+
+
+
+
+
+
+
+
+
+
 
 
 <!--  -->
