Fixed Broken SEO link

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -60,7 +60,7 @@
     <!-- Issue 4: div class = "content" is not semantic - NO ISSUE (FIXED) -->
     <div class="content">
         <!-- Issue 5: div class="search-engine-optimization" WILL BE section (FIXED) -->
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
