Added more comments to the code

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,6 +35,7 @@
         </div>
     </header>
     <!-- Issue 3: div class = "hero" is not semantic - NO ISSUE (FIXED) -->
+    <!-- I was told to leace this as div and not to change it to figure, if you are against this let me know -->
     <div class="hero"></div>
 
 
@@ -58,6 +59,7 @@
 
 
     <!-- Issue 4: div class = "content" is not semantic - NO ISSUE (FIXED) -->
+    <!-- I was told to leace this as div and not to change it to somthing else, if you are against this let me know -->
     <div class="content">
         <!-- Issue 5: div class="search-engine-optimization" WILL BE section (FIXED) -->
         <div id="search-engine-optimization" class="search-engine-optimization">
