--- a/Develop/index.html
+++ b/Develop/index.html
@@ -62,7 +62,7 @@
     <!-- I was told to leace this as div and not to change it to somthing else, if you are against this let me know -->
     <div class="content">
         <!-- Issue 5: div class="search-engine-optimization" WILL BE section (FIXED) -->
-        <section id="search-engine-optimization" class="online-marketing">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -70,7 +70,7 @@
             </p>
         </section>
         <!-- Issue 6: div  id="online-reputation-management class="online-reputation-management" WILL BE section (FIXED)-->
-        <section id="online-reputation-management" class="online-marketing">
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -78,7 +78,7 @@
             </p>
         </section>
         <!-- Issue 7: div  id="social-media-marketing class="social-media-marketing"  WILL BE section (FIXED) -->
-        <section id="social-media-marketing" class="online-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
