worked on part 4 - changed div into footer

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -133,12 +133,12 @@
 
 
     <!-- Issue 12: div class=footer" is not semantic WILL BE A footer (FIXED)-->
-    <div class="footer">
+    <footer class="madebyH">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
