Added more comments, change nav bar as well

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,7 +20,7 @@
     <header class="marketing">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <!-- Issue 2: div is not semantic WILL BE A nav (FIXED)-->
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -32,7 +32,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!-- Issue 3: div class = "hero" is not semantic - NO ISSUE (FIXED) -->
     <!-- I was told to leace this as div and not to change it to figure, if you are against this let me know -->
@@ -132,8 +132,8 @@
 <!--  -->
 
 
-    <!-- Issue 12: div class=footer" is not semantic WILL BE A footer (FIXED)-->
-    <footer class="madebyH">
+    <!-- Issue 12: div class=footer" is not semantic WILL BE A footer (FIXED) - DONE-->
+    <footer class="madebyHfooter">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
