--- a/Develop/index.html
+++ b/Develop/index.html
@@ -95,8 +95,8 @@
 <!--  -->
 <!--  -->
 
-    <!-- Issue 8: div class = "benefits" is not semantic - WILL BE AN aside (FIXED) -->
-    <div class="benefits">
+    <!-- Issue 8: div class = "benefits" is not semantic - WILL BE AN aside (FIXED-DONE) -->
+    <aside class="benefits">
         <!-- Issue 9: div class="benefit-lead" is not semantic KEEP AS div (FIXED) -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -121,7 +121,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
 
 <!--  -->
 <!--  -->
