Reogranized Part 1: Explain issues with comments in html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,36 +7,34 @@
     <title>Marketing Company</title>
 </head>
 
-<!--  -->
-<!--  -->
-<!--  -->
-<!-- Part 1 of Refactoring -->
-<!--  -->
-<!--  -->
-<!--  -->
+<!--         -->
+<!--         -->
+<!--         -->
+<!-- Part 1  -->
+<!--         -->
+<!--         -->
+<!--         -->
 
 <body>
-<!-- Issue 1: div class = "header" is not semantic - WILL BE A header (FIXED - DONE) -->
-    <header class="marketing">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- Issue 2: div is not semantic WILL BE A nav (FIXED)-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <!-- Issue 3: div class = "hero" is not semantic - NO ISSUE (FIXED) -->
-    <!-- I was told to leace this as div and not to change it to figure, if you are against this let me know -->
-    <div class="hero"></div>
+    <!-- Issue 1: div class = "header" is not semantic - WILL BE A header (FIXED - DONE) -->
+        <header class="marketing">
+            <h1>Hori<span class="seo">seo</span>n</h1>
+            <!-- Issue 2: div is not semantic WILL BE A nav (FIXED - DONE)-->
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="hero"></div>
 
 
 
