Reogranized Part 2: Explain issues with comments in html, class issue infosocial

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -47,43 +47,43 @@
 
 
 
-<!--  -->
-<!--  -->
-<!--  -->
-<!-- Part 2 of Refactoring -->
-<!--  -->
-<!--  -->
-<!--  -->
+<!--         -->
+<!--         -->
+<!--         -->
+<!-- Part 2  -->
+<!--         -->
+<!--         -->
+<!--         -->
 
 
-    <!-- Issue 4: div class = "content" is not semantic - NO ISSUE (FIXED) -->
-    <!-- I was told to leace this as div and not to change it to somthing else, if you are against this let me know -->
-    <div class="content">
-        <!-- Issue 5: div class="search-engine-optimization" WILL BE section (FIXED) -->
-        <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </section>
-        <!-- Issue 6: div  id="online-reputation-management class="online-reputation-management" WILL BE section (FIXED)-->
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </section>
-        <!-- Issue 7: div  id="social-media-marketing class="social-media-marketing"  WILL BE section (FIXED) -->
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </section>
-    </div>
+<div class="content">
+    <!-- Issue 3: div class="info-social" WILL BE section (FIXED - DONE) -->
+    <section id="search-engine-optimization" class="info-social">
+        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <h2>Search Engine Optimization</h2>
+        <p>
+            The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+        </p>
+    </section>
+    <!-- Issue 4: div class="info-social" WILL BE section (FIXED - DONE) -->
+    <section id="online-reputation-management" class="info-social">
+        <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <h2>Online Reputation Management</h2>
+        <p>
+            The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+        </p>
+    </section>
+    <!-- Issue 5: div class="info-social" WILL BE section (FIXED - DONE) -->
+    <section id="social-media-marketing" class="info-social">
+        <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <h2>Social Media Marketing</h2>
+        <p>
+            Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+        </p>
+    </section>
+</div>
+
+
 
 <!--  -->
 <!--  -->
