Reogranized Part 3: Explain issues with comments in html, class issue benefits

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -85,34 +85,34 @@
 
 
 
-<!--  -->
-<!--  -->
-<!--  -->
-<!-- Part 3 of Refactoring -->
-<!--  -->
-<!--  -->
-<!--  -->
+<!--         -->
+<!--         -->
+<!--         -->
+<!-- Part 3  -->
+<!--         -->
+<!--         -->
+<!--         -->
 
-    <!-- Issue 8: div class = "benefits" is not semantic - WILL BE AN aside (FIXED-DONE) -->
+    <!-- Issue 6: div class = "benefits" is not semantic - WILL BE AN aside (FIXED - DONE) -->
     <aside class="benefits">
-        <!-- Issue 9: div class="benefit-lead" is not semantic KEEP AS div (FIXED) -->
-        <div class="benefit-lead">
+        <!-- Issue 7: div class="benefit-info" is needs same selector witin aside (FIXED - DONE) -->
+        <div class="benefit-info">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <!-- Issue 10: div class="benefit-brand" is not semantic KEEP AS div (FIXED) -->
-        <div class="benefit-brand">
+        <!-- Issue 8: div class="benefit-info" is needs same selector witin aside (FIXED - DONE) -->
+        <div class="benefit-info">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <!-- Issue 11: div class="benefit-cost" is not semantic KEEP AS div (FIXED) -->
-        <div class="benefit-cost">
+        <!-- Issue 9: div class="benefit-info" is needs same selector witin aside (FIXED - DONE) -->
+        <div class="benefit-info">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -120,6 +120,7 @@
             </p>
         </div>
     </aside>
+
 
 <!--  -->
 <!--  -->
