Reogranized Part 4: Explain issues with comments in html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -122,16 +122,16 @@
     </aside>
 
 
-<!--  -->
-<!--  -->
-<!--  -->
-<!-- Part 4 of Refactoring -->
-<!--  -->
-<!--  -->
-<!--  -->
+<!--         -->
+<!--         -->
+<!--         -->
+<!-- Part 4  -->
+<!--         -->
+<!--         -->
+<!--         -->
 
 
-    <!-- Issue 12: div class=footer" is not semantic WILL BE A footer (FIXED) - DONE-->
+    <!-- Issue 10: div class=footer" is not semantic WILL BE A footer (FIXED - DONE)-->
     <footer class="madebyHfooter">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
